# openpiv-c--qt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README  README.md  Tuprules.tup  fftw.pri  libtiff.pri  meson.build  meson_options.txt  openpiv-c++.pro  pyproject.toml  setup.py  vcpkg.json
.ci/: osx-install-gcc.sh  setup-vcpkg.sh  windows-upgrade-to-vs2019.sh
.github/workflows/: build_test.yml  cmake.yml
cmake/: utils.cmake
documentation/: getting_started.html
documentation/.svn/: all-wcprops  entries
documentation/examples/: exp1_001_a.txt
documentation/images/.svn/: all-wcprops  entries
examples/: CMakeLists.txt  meson.build
examples/average_subtract/: CMakeLists.txt  README.md  main.cpp  meson.build
examples/data/test1/: exp1_001_a.tiff  exp1_001_b.tiff
examples/process/: CMakeLists.txt  README.md  exp1_001_b.tiff  main.cpp  meson.build  piv1.pgm  piv2.pgm  threadpool.hpp
legacy/: README.md
legacy/documentation/: getting_started.html
legacy/share/images/: images.qrc
legacy/src/: batchwindow.h  colourbar.h  datacontainer.cpp  datacontainer.h  fftcrosscorrelate.h  filteroptions.cpp  filters.cpp  filters.h  gaussiansubpixel.cpp  gaussiansubpixel.h  generategrid.cpp  imagedata.h  imagelist.h  imagepaint.h  importimagelist.h  importimages.cpp  importimages.h  importpopup.cpp  importpopup.h  itempaint.cpp  itempaint.h  main.cpp  mainwindow.h  maskdisplay.cpp  maskdisplay.h  maskdropdown.cpp  maskpaint.h  output.cpp  output.h  outputthread.cpp  outputthread.h  pivdata.h  pivdisplay.h  pivthread.h  preprocess.h  processing.h  session.h  settings.h  src.pri
legacy/ui/: batchwindow.ui  mainwindow.ui
lib/: CMakeLists.txt  Tupfile
lib/include/: EnumHelper.h  Image.h  ImageAlgos.h  ImageExpression.h  ImageInterface.h  ImageLoader.h  ImageStats.h  ImageTypeTraits.h  ImageUtils.h  ImageView.h  PNMImageLoader.h  PixelTypes.h  Point.h  Range.h  Rect.h  Size.h  TIFFImageLoader.h  Util.h  exception_builder.h  image.h  image_algos.h  image_expression.h  image_loader.h  image_stats.h  image_utils.h  image_view.h  pixel_types.h  pnm_image_loader.h  point.h  range.h  rect.h  tiff_image_loader.h  util.h
lib/include/detail/: image_utils.impl.h
lib/include/openpiv/algos/: fft.h  stats.h
lib/include/openpiv/core/: enum_helper.h  image.h  image_utils.h  image_view.h  pixel_types.h  point.h  propagate_const.h  rect.h  util.h
lib/include/openpiv/core/detail/: grid.impl.h  image_utils.impl.h  util.impl.h
lib/include/openpiv/loaders/: image_loader.h  pnm_image_loader.h  tiff_image_loader.h
lib/src/: ImageLoader.cpp  PNMImageLoader.cpp  Size.cpp  TIFFImageLoader.cpp  Util.cpp  image_loader.cpp  pnm_image_loader.cpp  rect.cpp  size.cpp  tiff_image_loader.cpp  util.cpp
openpiv/: CMakeLists.txt  meson.build
openpiv/algos/: fft.h  fft_common.h  pocket_fft.h  stats.h
openpiv/core/: enum_helper.h  enumerate.h  exception_builder.h  grid.h  image.h  image_expression.h  image_type_traits.h  image_utils.h  image_view.h  log.h  pixel_types.h  point.h  rect.cpp  rect.h  size.h  stream_utils.h  util.cpp  util.h  vector.h
openpiv/core/detail/: grid.impl.h  image_utils.impl.h  util.impl.h
openpiv/loaders/: image_loader.cpp  image_loader.h  pnm_image_loader.cpp  pnm_image_loader.h  tiff_image_loader.cpp  tiff_image_loader.h
openpiv/pybind/: CMakeLists.txt
openpiv/pybind/core/: bindings.cpp  module.cpp  point.cpp  rect.cpp  size.cpp  vector.cpp
openpiv/test/: CMakeLists.txt  grid_test.cpp  image_algos_benchmark.cpp  image_loader_test.cpp  pixel_types_test.cpp  point_test.cpp  range_test.cpp  rect_test.cpp  test_utils.h  util_test.cpp
pybind/: CMakeLists.txt
pybind/core/: grid.cpp  image.cpp  loader.cpp  log.cpp  module.cpp  pixel_types.cpp  point.cpp  pyutils.h  rect.cpp  size.cpp  vector.cpp
pybind/test/: CMakeLists.txt  grid_test.py  point_test.py  rect_test.py  size_test.py
share/.svn/: all-wcprops  entries
share/icons/: icons.qrc
share/icons/.svn/: all-wcprops  entries
share/images/.svn/: all-wcprops  entries
src/: analysis.cpp  analysis.h  batchwindow.cpp  batchwindow.h  colourbar.cpp  datacontainer.cpp  datacontainer.h  fftcrosscorrelate.cpp  fftcrosscorrelate.h  filteroptions.cpp  filteroptions.h  filters.cpp  filters.h  gaussiansubpixel.cpp  gaussiansubpixel.h  generategrid.cpp  generategrid.h  imagedata.cpp  imagedata.h  imagelist.cpp  imagelist.h  imagepaint.cpp  imagepaint.h  importimagelist.cpp  importimagelist.h  importimages.cpp  importimages.h  importpopup.cpp  importpopup.h  itempaint.cpp  itempaint.h  main.cpp  mainwindow.cpp  mainwindow.h  maskdisplay.cpp  maskdisplay.h  maskdropdown.cpp  maskdropdown.h  maskpaint.cpp  maskpaint.h  (+21 more)
src/.svn/: all-wcprops  entries
src/.svn/text-base/: analysis.h.svn-base  batchwindow.cpp.svn-base  batchwindow.h.svn-base  colourbar.cpp.svn-base  colourbar.h.svn-base  datacontainer.cpp.svn-base  fftcrosscorrelate.cpp.svn-base  filters.cpp.svn-base  filters.h.svn-base  generategrid.cpp.svn-base  generategrid.h.svn-base  (+28 more)
src/lib/: lib.pri
subprojects/: .gitignore  README.md  cxxopts.wrap  liblzma.wrap  libtiff.wrap
test/: CMakeLists.txt  EnumHelperTest.cpp  ImageAlgosBenchmark.cpp  ImageAlgosTest.cpp  ImageAlgosTest.h  ImageExpressionTest.cpp  ImageExpressionTest.h  ImageLoaderTest.cpp  ImageLoaderTest.h  ImageStatsTest.cpp  ImageStatsTest.h  ImageTest.cpp  ImageTest.h  ImageUtilsBenchmark.cpp  ImageUtilsTest.cpp  ImageViewTest.cpp  ImageViewTest.h  PixelTypesTest.cpp  PixelTypesTest.h  PointTest.cpp  PointTest.h  RangeTest.cpp  RectTest.cpp  RectTest.h  SizeTest.cpp  SizeTest.h  TestUtils.h  Tupfile  UtilTest.cpp  UtilTest.h  corr_a.tiff  enum_helper_test.cpp  grid_test.cpp  image_algos_benchmark.cpp  image_algos_test.cpp  image_expression_test.cpp  image_loader_test.cpp  image_stats_test.cpp  image_test.cpp  image_utils_benchmark.cpp  (+13 more)
tests/: image_algos_test.cpp  image_expression_test.cpp  image_utils_benchmark.cpp  meson.build  test-mono.tiff  test_utils.h  util_test.cpp  vector_test.cpp
ui/: importimages.ui  mainwindow.ui
ui/.svn/: all-wcprops  entries
(+14 files in other folders)
